--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,7 +27,7 @@ body {
   box-sizing: border-box;
 }
 
-.header1 {
+.header {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
@@ -44,10 +44,10 @@ body {
     top: 4rem;
     left: 4rem;
   }
-}
 
-.header__logo {
-  height: 3.5rem;
+  &__logo {
+    height: 3.5rem;
+  }
 }
 
 .header__logo:hover {
